[gd_scene load_steps=14 format=3 uid="uid://rbhl0inglv72"]

[ext_resource type="Script" uid="uid://bersylxg1y7cx" path="res://scripts/pause_screen.gd" id="1_27awe"]
[ext_resource type="Shader" uid="uid://cly3cmh6ij0cr" path="res://shaders/blur_pause.gdshader" id="1_hr2n2"]
[ext_resource type="Texture2D" uid="uid://dhx2lbnvoijuf" path="res://assets/ui/cozy gui/Cozy GUI/Tileset/Cozy GUI - Tileset (By Pizza Doggy).png" id="1_qeunj"]
[ext_resource type="FontFile" uid="uid://bjaw4kieh4cbo" path="res://assets/font/BoldPixels.ttf" id="2_hr2n2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_27awe"]
shader = ExtResource("1_hr2n2")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_27awe"]
texture = ExtResource("1_qeunj")
texture_margin_left = 5.0
texture_margin_top = 7.0
texture_margin_right = 5.0
texture_margin_bottom = 7.0
region_rect = Rect2(482, 1, 44, 46)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_im14c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_im14c"]
bg_color = Color(0.172833, 0.172833, 0.172833, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 8
border_color = Color(1, 0.835294, 0.254902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wrniu"]
bg_color = Color(0.114897, 0.114897, 0.114897, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
shadow_color = Color(0, 0, 0, 0.858824)
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l46iw"]
bg_color = Color(0.172833, 0.172833, 0.172833, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0
anti_aliasing = false

[sub_resource type="Animation" id="Animation_27awe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hr2n2"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.886]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_duq8p"]
_data = {
&"RESET": SubResource("Animation_27awe"),
&"blur": SubResource("Animation_hr2n2")
}

[node name="Pause Screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27awe")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_27awe")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -145.5
offset_right = 145.5
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_27awe")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -50.5
offset_right = 48.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="resume_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hr2n2")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_im14c")
theme_override_styles/hover = SubResource("StyleBoxFlat_im14c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wrniu")
theme_override_styles/normal = SubResource("StyleBoxFlat_l46iw")
text = "Resume"

[node name="menu_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hr2n2")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_im14c")
theme_override_styles/hover = SubResource("StyleBoxFlat_im14c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wrniu")
theme_override_styles/normal = SubResource("StyleBoxFlat_l46iw")
text = "Main Menu"

[node name="exit_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hr2n2")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_im14c")
theme_override_styles/hover = SubResource("StyleBoxFlat_im14c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wrniu")
theme_override_styles/normal = SubResource("StyleBoxFlat_l46iw")
text = "Exit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_duq8p")
}

[connection signal="pressed" from="Panel/VBoxContainer/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/menu_btn" to="." method="_on_menu_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/exit_btn" to="." method="_on_exit_btn_pressed"]
